@@ -1,4 +1,7 @@
 2012-08-20 dschulze@adobe.com
+	Add introduction for 'mask-box-image'.
+
+2012-08-20 dschulze@adobe.com
 	Allow <shape>, child and select() values for 'clip-path'.
 
 2012-08-15 dschulze@adobe.com
